--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   dotenv: ^4.1.0
   flutter:
     sdk: flutter
-  flutter_inappwebview: ^5.7.2+3
-  http: ^1.1.0
+  flutter_inappwebview: ^6.1.5
+  http: ^1.2.2
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   tuple: ^2.0.2
